assets/css/styles.css
/* Global Styles */

body {
    margin: 0px;
    padding: 0px;
    border: 0px;
    font-family: 'Space Mono', monospace;
    text-align: center;
    background-color: #213a3a;
    color: #ffffff;
}

/* Page Header Sction Styles */

#page-title-wrapper {
    width: 100%;
    height: 40%;
    max-height: 500px;
    margin-bottom: 5px;
}

.intro {
    width: 80%;
    max-height: 300px;
    line-height: 20px;
    margin-left: auto;
    margin-right: auto;
    font-size: small;
}

/* Game Board Section Styles */

#game-board {
    background-color: #472d0a;
    width: 90%;
    height: 65%;
    max-width: 750px;
    max-height: 530px;
    padding: 15px;
    margin-top: 2px;
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
}

.board-headline {
    width: 100%;
    margin: 5px;
}

#number-input-section {
    width: 100%;
    height: 30vh;
    max-height: 100px;
    margin-left: auto;
    margin-right: auto;
}

.number-input {
    width: 20%;
    max-width: 150px;
    height: 30vh;
    max-height: 100px;
    box-sizing: border-box;
    background-color: #ffffff;
    color: #000000;
    float: left;
    border: 2px solid #472d0a;
    line-height: 90px;
    margin-left: auto;
    margin-right: auto;
    font-size: x-large;
}

.number-input::placeholder {
    font-size: small;
}

input {
    text-align: center;
}

#reset-button {
    margin: 10px;
    width: 200px;
    height: 40px;
    font-family: 'Space Mono', monospace;
    font-weight: bold;
}

#submit-answer {
    width: 75%;
    max-width: 150px;
    height: 70px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 15px;
    margin-bottom: 10px;
    font-family: 'Space Mono', monospace;
    font-weight: bold;
}

/* Game History Section Styles */

#game-history {
    margin-top: 15px;
    box-sizing: border-box;
    width: 80%;
    max-width: 750px;
    margin-left: auto;
    margin-right: auto;
}

table, th, td {
    width: 100%;
    border: 2px solid #ffffff;
    border-collapse: collapse;
}

table{
    margin-bottom: 15px;
}

th {
    font-size: small;
}

td {
    height: 25px;
}

.player-name {
    width: 70%;
}

.level-completed {
    width: 30%;
}

/* Footer Styles */

#footer-section{
    width: 100%;
    margin-top: 10px;
}

#learn-more {
    color: #ffffff;
    font-style: italic;
    margin: 2px;
}

#maths-is-fun { 
    color: #ffffff;
    font-size: larger;
}

#maths-is-fun:hover {
    background-color: #ffffff;
    color: #000000;
    font-size: larger;
}

